Bugfix: Enabled scrollbar in dashboard.

--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -591,6 +591,7 @@ h4 {
 /* BODY */
 
 #body-wrapper {
+    display: block;
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -604,10 +605,14 @@ h4 {
 }
 
 #body {
-	display: table;
-	width: 100%;
-	height: 100%;
+	display: block;
 	position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.table {
+    display: table;
 }
 
 #canvas {
@@ -753,6 +758,9 @@ h4 {
 	padding: 15px;
 }
 
+.scroll-vertical {
+    overflow-y: scroll;
+}
 
 /* FOOTER */
 
